tests/samples/negative/generics/generic_enum_array_payload_storage.ax
module generic_enum_array_payload_storage;

struct Bytes<T> {
    data: [2]T;
}

enum Slot<T>: u8 {
    full(Bytes<T>) = 1,
    empty = 2,
}

fn main() -> i32 {
    let value: *mut Slot<i32> = null;
    return 0;
}
